# ida-agent-bridge

./: .gitignore  LICENSE  README.en.md  README.md  SKILL.md  pyproject.toml
reference/: ida-domain-advanced.md  ida-domain.md
src/ida_bridge/: cli.py  cli_syms.py  command.py  export.py  hooks.py  metrics.py  repl.py  shell.py
src/ida_bridge/cmd/: __init__.py  decompile.py  disasm.py  edit.py  hexdump.py  navigation.py  search.py  symbols.py  xrefs.py
tests/: conftest.py  test_cli.py  test_commands.py  test_export.py  test_export_functions.py  test_export_incremental.py  test_export_pure.py  test_export_strings.py  test_export_structure.py  test_hooks.py  test_metrics.py  test_repl.py  test_server.py  test_shell.py
tests/fixtures/: libssl.dylib
