[project]
name = "ida-agent-bridge"
version = "0.1.0"
description = "IDA Pro agent bridge with CLI and real-time file sync"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ida-domain==0.5.0", "cyclopts>=4.0"]

[project.scripts]
ida-bridge = "ida_bridge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_bridge"]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:importlib"]
